--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,11 +1,75 @@
 .footer {
-  width: 100%;
-  height: 50px;
-  background-color: #555152;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  color: white;
+  height: 150px;
 }
 
-@media (max-width: 767px) {
+.footer-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1100px;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.footer-left {
+  display: flex;
+  align-items: center;
+}
+
+.footer-logo {
+  width: 100px; /* Adjust the size as needed */
+  margin-right: 10px;
+}
+
+.footer-right {
+  text-align: right;
+}
+
+.footer-right a {
+  color: white;
+  margin-left: 10px;
+}
+
+.footer-right a:hover {
+  color: #4caf50;
+}
+
+.footer-social-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+@media (max-width: 768px) {
   .footer {
+    height: 230px;
     position: absolute;
+    bottom: -370px;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .footer-logo {
+    width: 70px;
+  }
+
+  .footer-right {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer-social-container {
+    justify-content: center;
   }
 }
