--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .navbar-logo {
@@ -49,6 +50,11 @@
 .nav-dropdown {
   position: relative;
   cursor: pointer;
+  color: white;
+}
+
+.nav-dropdown span {
+  font-size: 16px !important;
 }
 
 .dropdown-content {
@@ -72,14 +78,6 @@
   background-color: #f2f2f2;
 }
 
-.nav-menu {
-  padding-left: 50px;
-  display: flex;
-  justify-content: space-around !important;
-  align-items: center;
-  flex: 1;
-}
-
 /*  */
 
 @media (max-width: 768px) {
@@ -87,20 +85,116 @@
     width: 100%;
     padding: 0px 20px;
   }
-
   .navbar-links-container {
     display: none;
   }
-
   .navbar-login-container {
     display: none;
   }
-
   .navbar-logo {
     height: 50px;
   }
 
   .navbar-burger-menu {
     display: flex;
+  }
+}
+
+.nav-menu {
+  display: flex;
+  list-style: none;
+  text-align: center;
+  margin-right: 2rem;
+
+  justify-content: space-around;
+}
+
+.nav-link-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-icon {
+  display: none;
+  color: #f5b921;
+}
+
+@media screen and (max-width: 960px) {
+  .nav-menu {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    border-top: 1pxsolid #fff;
+    position: absolute;
+    top: 100px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    height: 400px;
+  }
+
+  .nav-link-container {
+    flex-direction: column;
+    width: 80%;
+    gap: 20px;
+
+    align-items: center;
+  }
+
+  .navbar-user-log-container {
+    align-items: center !important;
+  }
+
+  .navbar-icon {
+    display: none !important;
+  }
+
+  .navbar-user-logout-container {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    word-break: break-all;
+  }
+
+  .navbar-user-span {
+    color: black;
+  }
+
+  .nav-menu.active {
+    background-color: black;
+    left: 0px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .nav-item .active {
+    color: #ffdd40;
+    border: none;
+  }
+  .nav-links {
+    padding: 1.5rem;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-logo .icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .nav-icon {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-100%, -50%);
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    color: #ffdd40;
   }
 }
