--- a/src/pages/viewDetails/ViewDetails.css
+++ b/src/pages/viewDetails/ViewDetails.css
@@ -1,8 +1,8 @@
 .viewdetails {
   width: 100%;
-  height: calc(100vh - 100px);
+  padding-bottom: 50px;
   background-color: white;
-
+  min-height: 84vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -11,8 +11,9 @@
 .viewdetails-container {
   max-width: 1100px;
   width: 100%;
-
+  padding-bottom: 50px;
   display: flex;
+
   align-items: center;
   flex-direction: column;
   padding: 20px;
@@ -29,7 +30,8 @@
 }
 .viewdetails-item {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /*  */
@@ -60,4 +62,18 @@
 .base-64-image {
   width: 200px;
   height: 200px;
+}
+
+.submit-rating {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
 }
